--- a/server/.env
+++ b/server/.env
@@ -3,4 +3,4 @@ PORT=5000
 MONGODB_URI=mongodb+srv://akash:U5yUapZOscZ3uW2x@cluster0.wwrimsb.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=helpdesk_secret_key_change_in_production
 NODE_ENV=development 
-REACT_APP_API_URL=https://ticket-three-eta.vercel.app
+REACT_APP_API_URL=https://ticket-lime-gamma.vercel.app
